# hcore

./: .gitignore  CMakeLists.txt  INSTALL.md  Jenkinsfile  LICENSE  README.md  RELEASE.md  hcore.pc.in
cmake_modules/: GenPkgConfig.cmake
scripts/: build.sh  modules-ecrc.sh  update_version_and_date.py
src/: CMakeLists.txt
src/compute/: hcore_dgemm.c  hcore_dgemm_fast.c  hcore_dgemmbdcd.c  hcore_dgemmcd.c  hcore_dpotrf.c  hcore_dsyrk.c  hcore_dtrsm.c  hcore_duncompress.c  hcore_sgemm.c  hcore_strsm.c  hcore_zgemm.c  hcore_zgemm_fast.c  hcore_zgemmbdcd.c  hcore_zsyrk.c  hcore_zuncompress.c
src/control/: hcore_init.c
src/include/: hcore.h  hcore_d.h  hcore_init.h  hcore_s.h  hcore_z.h
src/misc/compute/: dnormest.c  znormest.c
src/misc/descutil/: descprint.c  descsame.c  flop_counts.c
src/misc/include/: auxcompute_d.h  auxcompute_z.h  auxdescutil.h  flop_counts.h  flop_util.h  flop_util_structs.h
testing/: CMakeLists.txt  testing_dgemm.c  testing_dgemmcd.c  testing_dsyrk.c  testing_sgemm.c  testing_zgemm.c  testing_zsyrk.c
